:lipstick: Update templates

--- a/semantic-release-template/commit-template.hbs
+++ b/semantic-release-template/commit-template.hbs
@@ -1,1 +1,1 @@
-{{subject}} [`{{commit.short}}`](https://github.com/{{owner}}/{{repo}}/commit/{{commit.short}}) `{{shortDate committerDate}}`
+{{gitmoji}} {{subject}} [`{{commit.short}}`](https://github.com/{{owner}}/{{repo}}/commit/{{commit.short}}) `{{shortDate committerDate}}`
